docs/7.55/md/abencompute_expressions.md
---
title: "Numeric Calculations"
description: |
  For the execution of numeric calculations, mainly arithmetic expressions(https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenarithmetic_expression_glosry.htm 'Glossary Entry') are available that can be used in operand positions and, in particular, on the right side of the assignment op
version: "7.55"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencompute_expressions.htm"
abapFile: "abencompute_expressions.htm"
keywords: ["do", "try", "class", "data", "types", "abencompute", "expressions"]
---

* * *

AS ABAP Release 755, ©Copyright 2020 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_data_working.htm) → 

Numeric Calculations

For the execution of numeric calculations, mainly [arithmetic expressions](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenarithmetic_expression_glosry.htm "Glossary Entry") are available that can be used in operand positions and, in particular, on the right side of the [assignment operator\=](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenequals_operator.htm). [Numeric data objects](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennumeric_data_object_glosry.htm "Glossary Entry"), that is, data objects that can be converted to [numeric data types](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennumeric_data_type_glosry.htm "Glossary Entry"), and [numeric functions](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenmathematical_funktion_glosry.htm "Glossary Entry") that have a numeric return value can be used as operands of an arithmetic expression. The numeric functions are enhanced by some [system classes](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abensystem_class_glosry.htm "Glossary Entry"). Finally, there are four standalone assignment operators that can be used for the basic arithmetic operations.

-   [Numeric Data Types](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennumber_types.htm)

-   [Arithmetic Expressions](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abapcompute_arith.htm)

-   [Numeric Functions](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenmathematical_functions.htm)

-   [System Classes for Numbers](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencl_abap_math.htm)

-   [Calculation Assignments +=, \=, \*=, /=](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencalculation_assignments.htm)

Hint

In addition to the language elements shown here, there is also a set of [obsolete calculation statements](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencomputing_obsolete.htm).

Continue
[Numeric Data Types](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennumber_types.htm)
[Arithmetic Expressions (arith\_exp)](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abapcompute_arith.htm)
[Numeric Functions (num\_func)](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenmathematical_functions.htm)
[System Classes for Numbers](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencl_abap_math.htm)
[+=, -=, \*=, /=, Calculation Assignments](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abencalculation_assignments.htm)