docs/7.57/md/abencompute_expressions.md
---
title: "Numeric Calculations"
description: |
  Numeric calculations are executed mainly using arithmetic expressions(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenarithmetic_expression_glosry.htm 'Glossary Entry') that can be used in operand positions and, in particular, on the right side of the assignment operator=(https:/
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencompute_expressions.htm"
abapFile: "abencompute_expressions.htm"
keywords: ["do", "if", "try", "class", "data", "types", "abencompute", "expressions"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_working.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Numeric Calculations, ABENCOMPUTE_EXPRESSIONS, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0
A%0D%0ASuggestion for improvement:)

Numeric Calculations

Numeric calculations are executed mainly using [arithmetic expressions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenarithmetic_expression_glosry.htm "Glossary Entry") that can be used in operand positions and, in particular, on the right side of the [assignment operator\=](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenequals_operator.htm). [Numeric data objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennumeric_data_object_glosry.htm "Glossary Entry"), that is, data objects that can be converted to [numeric data types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennumeric_data_type_glosry.htm "Glossary Entry"), and [numeric functions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmathematical_funktion_glosry.htm "Glossary Entry") that have a numeric return value can be used as operands of an arithmetic expression. Some [system classes](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensystem_class_glosry.htm "Glossary Entry") complement the numeric functions with additional functions. Finally, there are four standalone assignment operators that can be used for the basic arithmetic operations.

-   [Numeric Data Types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennumber_types.htm)
-   [Arithmetic Expressions (arith\_exp)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapcompute_arith.htm)
-   [Numeric Functions (num\_func)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmathematical_functions.htm)
-   [System Classes for Numbers](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_abap_math.htm)
-   [+=, \-=, \*=, /=, Calculation Assignments](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencalculation_assignments.htm)

Hint

In addition to the language elements shown here, there is also a set of [obsolete calculation statements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencomputing_obsolete.htm).

Continue
[Numeric Data Types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennumber_types.htm)
[Arithmetic Expressions (arith\_exp)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapcompute_arith.htm)
[Numeric Functions (num\_func)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmathematical_functions.htm)
[System Classes for Numbers](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_abap_math.htm)
[+=, -=, \*=, /=, Calculation Assignments](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencalculation_assignments.htm)